# Teaching

./: README.md
code/: run-msdev.txt
code-templates/: README.md
code-templates/automation/: app.xml
code-templates/cartesian-if/src/: CMakeLists.txt  main.cpp
code-templates/cartesian-interface/app/scripts/: app.xml  system.xml
code-templates/cartesian-interface/src/: CMakeLists.txt  main.cpp
code-templates/gaze-if/app/scripts/: app.xml
code-templates/gaze-if/src/detector/: CMakeLists.txt  Detector.h
code-templates/gaze-if/src/mover/: CMakeLists.txt  main.cpp
code-templates/gaze-if/src/tracker/: main.cpp
code-templates/gaze-interface/app/scripts/: app.xml  system.xml
code-templates/gaze-interface/src/mover/: main.cpp
code-templates/gaze-interface/src/tracker/: CMakeLists.txt  main.cpp
code-templates/hello-cmake/: CMakeLists.txt
code-templates/hello-yarp/: CMakeLists.txt  hello_yarp.cpp
code-templates/icub-vision/: CMakeLists.txt  lookAtLocation.cpp  look_at.cpp  object_detector.cpp
code-templates/icub-vision/app/: app.xml  icub-vision.xml~
code-templates/icubVision/: lookAtLocation.cpp
code-templates/icubVision/opencv/: main.cpp
code-templates/opencv/: opencv.cpp
code-templates/producer-consumer/: CMakeLists.txt  consumer.cpp  producer.cpp
code-templates/producer-consumer-buffered/: CMakeLists.txt  consumer.cpp  producer.cpp
code-templates/relay/: relay.cpp
code-templates/rfmodule/: module.cpp
code-templates/rfmodule-thrift/: memory.thrift  module.cpp  moduleClient.cpp  readme.txt
code-templates/ros-turtlesim/: CMakeLists.txt  Readme.txt  main.cpp
code-templates/rpc/: CMakeLists.txt  rpc-client.cpp  rpc-server.cpp
code-templates/wbi/: Module.cpp  Module.h
code/automation/: app.xml
code/cartesian-if/app/scripts/: app.xml
code/cartesian-if/src/: CMakeLists.txt
code/cartesian-interface/app/scripts/: app.xml  system.xml
code/cartesian-interface/src/: CMakeLists.txt  main.cpp
code/gaze-if/src/: CMakeLists.txt
code/gaze-if/src/detector/: objectDetector.cpp
code/gaze-if/src/mover/: main.cpp
code/gaze-if/src/tracker/: CMakeLists.txt  main.cpp
code/gaze-interface/app/scripts/: app.xml
code/gaze-interface/src/: CMakeLists.txt
code/gaze-interface/src/detector/: CMakeLists.txt  Detector.cpp  objectDetector.cpp
code/gaze-interface/src/mover/: CMakeLists.txt  main.cpp
code/gaze-interface/src/tracker/: CMakeLists.txt  main.cpp
code/hello-cmake/: CMakeLists.txt  hello.cpp
code/hello-yarp/: hello_yarp.cpp
code/icub-vision/: CMakeLists.txt  lookAtLocation.cpp  lookAtLocation.cpp~  look_at.cpp  move_ball.cpp  object_detector.cpp  object_detector.cpp~
code/icub-vision/app/: app.xml  app.xml~  icub-vision.xml
code/icub-vision/opencv/: CMakeLists.txt  main.cpp
code/icubVision/: lookAtLocation.cpp  object_detector.cpp
code/icubVision/app/: app.xml
code/opencv/: CMakeLists.txt  README.md  Readme.txt  opencv.cpp
code/producer-consumer/: producer.cpp
code/producer-consumer-buffered/: producer.cpp
code/relay/: CMakeLists.txt  relay.cpp
code/rfmodule-calculator-rpc/: module.cpp
code/rfmodule-calculator-thrift/: CMakeLists.txt  calculator.thrift  module.cpp  readme.txt
code/rfmodule-multi-thread/: CMakeLists.txt  module.cpp
code/rfmodule-thrift/: CMakeLists.txt  memory.thrift~  module.cpp  moduleClient.cpp  readme.txt
code/ros-turtlesim/: CMakeLists.txt  Twist.msg  main.cpp
code/rpc/: rpc-client.cpp  rpc-server.cpp
code/wbi/: CMakeLists.txt  Module.cpp  Module.h  README.md  main.cpp  simulink_model.mdl  wbi-config.ini
exams/make-it-roll/: exam.pptx
exams/make-it-roll/app/scripts/: app.xml  system.xml
exams/make-it-roll/src/: CMakeLists.txt  main.cpp
misc/: signatures.xlsx
slides/2015-iit/: cartesian-gaze-interfaces.pptx  code-tutorials.pptx  motorControl.ppt  robotVision.ppt  thrift.pptx
slides/2015-vvv/: ros-tutorial.pptx
slides/2016-iit/: cartesian-gaze-interfaces.pptx
